--- a/frontend/src/CSSmodules/AccountPage.module.css
+++ b/frontend/src/CSSmodules/AccountPage.module.css
@@ -1,12 +1,50 @@
 .container {
-  display: flex;
-  justify-content: center;
+  width: 100%;
+  min-height: calc(100vh - 64px);
   align-items: center;
-  width: 100vw;
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  padding-bottom: 50px;
+}
+
+.header {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  padding: 20px;
+}
+
+.name {
+  font-weight: bold;
+  color: #111;
+  font-size: 2.5rem;
+  display: block;
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  border-bottom: #ffc107 solid 2px;
+  width: 100%;
+}
+
+.email {
+  font-size: 1.5rem;
+  color: #111;
+  margin: 10px 0;
+  background-color: rgba(255, 255, 255, 0.6);
+  border: #111 solid 1px;
+  border-radius: 5px;
+  padding: 10px;
+  width: auto;
+}
+
+.editAccount {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  border-top: #111 solid 2px;
 }
 
 .card {
@@ -33,13 +71,6 @@
     max-width: 600px;
     padding: 3.5rem 4rem;
   }
-}
-
-.title {
-  font-size: 1.8rem;
-  text-align: center;
-  color: #ffc107;
-  margin-bottom: 1.5rem;
 }
 
 .form {
@@ -93,12 +124,36 @@
     max-width: 95vw;
   }
 
-  .title {
-    font-size: 1.5rem;
-  }
-
   .input,
   .button {
     font-size: 0.95rem;
   }
+}
+
+.logout_button {
+  background-color: #111;
+  border: none;
+  color: #ffc107;
+  padding: 0.4rem 0.9rem;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 6px;
+  margin-top: 0.3rem;
+  font-size: 2rem;
+  transition: background 0.3s, color 0.3s;
+}
+
+.logout_button:hover {
+  background-color: #ffc107;
+  color: #111;
+}
+
+.logoutContainer {
+  display: flex;
+  justify-content: center;
+  border-top: #111 solid 2px;
+  padding-top: 40px;
+  align-items: center;
+  width: 100%;
+  margin-top: 20px;
 }
