--- a/frontend/src/CSSmodules/MainPage.module.css
+++ b/frontend/src/CSSmodules/MainPage.module.css
@@ -5,6 +5,7 @@
   padding: 20px;
   justify-items: center;
   max-width: 85%;
+  margin: 0;
 }
 .container {
   width: 100%;
@@ -13,6 +14,9 @@
   align-items: center;
   display: flex;
   flex-direction: column;
+  padding: 0;
+  margin: 0;
+  position: relative;
 }
 
 .header {
