--- a/frontend/src/CSSmodules/AboutPage.module.css
+++ b/frontend/src/CSSmodules/AboutPage.module.css
@@ -62,6 +62,15 @@ h3 {
   flex-wrap: wrap;
 }
 
+.middleParag {
+  font-size: 1.2rem;
+  color: #555;
+  line-height: 1.6;
+  margin-bottom: 1.5rem;
+  text-align: center;
+  align-items: center;
+}
+
 @media (max-width: 600px) {
   h1 {
     font-size: 2rem;
