--- a/frontend/src/CSSmodules/NavigationBar.module.css
+++ b/frontend/src/CSSmodules/NavigationBar.module.css
@@ -9,6 +9,16 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
 }
 
+.icon {
+  width: 30px;
+  height: 30px;
+}
+
+.iconContainer {
+  position: absolute;
+  left: 1rem;
+}
+
 .nav_left {
   display: flex;
   gap: 0.7rem;
@@ -18,7 +28,7 @@
 }
 
 .nav_link {
-  color: #ffc107; /* dark yellow */
+  color: #111;
   text-decoration: none;
   font-weight: 500;
   font-size: 1.05rem;
