--- a/frontend/src/CSSmodules/MainPage.module.css
+++ b/frontend/src/CSSmodules/MainPage.module.css
@@ -10,7 +10,7 @@
 .container {
   width: 100%;
   min-height: calc(100vh - 64px);
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   display: flex;
   flex-direction: column;
