--- a/frontend/src/CSSmodules/PetPage.module.css
+++ b/frontend/src/CSSmodules/PetPage.module.css
@@ -1,5 +1,6 @@
 .container {
   width: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
