--- a/frontend/src/CSSmodules/PetCard.module.css
+++ b/frontend/src/CSSmodules/PetCard.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   overflow: hidden;
   border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 8px 8px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.4s ease;
   background-color: white;
 }
