--- a/frontend/src/CSSmodules/SigninPage.module.css
+++ b/frontend/src/CSSmodules/SigninPage.module.css
@@ -53,6 +53,22 @@
   color: #555;
 }
 
+.labelPass {
+  font-size: 1rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 0.3rem;
+  color: #555;
+}
+
+.passBtn {
+  color: #666666;
+  text-decoration: none;
+  font-size: 1rem;
+  padding: 0;
+  margin: 0;
+}
+
 .input {
   padding: 0.75rem;
   border: 1px solid #ccc;
